--- a/css/highContrast.css
+++ b/css/highContrast.css
@@ -14,7 +14,7 @@ body {
 .homepage-tea {
     position: relative;
     width: 100%;
-    background-image: url('images/teabiscuit.jpg');
+    background-image: url('../images/teabiscuit.jpg');
     height: 300px;
     border-radius: 10px;
     background-size: cover;
@@ -23,7 +23,7 @@ body {
 .homepage-afternoon {
     position: relative;
     width: 100%;
-    background-image: url('images/afternoontea.jpg');
+    background-image: url('../images/afternoontea.jpg');
     height: 300px;
     border-radius: 10px;
     background-size: cover;
@@ -32,7 +32,7 @@ body {
 .homepage-crafts {
     position: relative;
     width: 100%;
-    background-image: url('images/crafts.jpg');
+    background-image: url('../images/crafts.jpg');
     height: 300px;
     border-radius: 10px;
     background-size: cover;
@@ -41,7 +41,7 @@ body {
 .homepage-bed {
     position: relative;
     width: 100%;
-    background-image: url('images/bandb.jpg');
+    background-image: url('../images/bandb.jpg');
     height: 300px;
     border-radius: 10px;
     background-size: cover;
